# wavefront_path_tracer

./: Cargo.toml  README.md  imgui.ini
cpu_wavefront_pt/: Cargo.toml
cpu_wavefront_pt/src/: app.rs  compute_shader.rs  gpu.rs  gpu_rng.rs  main.rs  path_tracer.rs  ray.rs  ray_gen_shader.rs  wavefront_path_integrator.rs
gpu_wavefront_pt/: Cargo.toml
gpu_wavefront_pt/shaders/: accumulate.wgsl  compute_megakernel.wgsl  compute_rest.wgsl  extend.wgsl  generate_rays.wgsl  miss_kernel.wgsl  shade.wgsl
gpu_wavefront_pt/src/: accumulate.rs  app.rs  compute_rest.rs  display.rs  extend.rs  generate_ray.rs  gpu_timing.rs  kernel.rs  main.rs  miss.rs  path_tracer.rs  query_gpu.rs  shade.rs
wavefront_common/: Cargo.toml
wavefront_common/shaders/: display_shader.wgsl
wavefront_common/src/: bvh.rs  camera.rs  camera_controller.rs  constants.rs  frames_per_second.rs  gpu_buffer.rs  gpu_structs.rs  gui.rs  lib.rs  material.rs  parameters.rs  projection_matrix.rs  ray.rs  scene.rs  sphere.rs  util_funcs.rs  wgpu_state.rs
